[gd_scene load_steps=10 format=2]

[ext_resource path="res://font/alphbeta.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://enemies/UpArrowBullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemies/Grahams.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 96
outline_size = 2
outline_color = Color( 0.360784, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 2
outline_color = Color( 0.360784, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=4]
resource_name = "circle_shot_charge"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("UpArrow1:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0, 30.0, -30.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UpArrow2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.6, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 30.0, -30.0, 30.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UpArrow3:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.6, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0, 30.0, -30.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("UpArrow4:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.6, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 30.0, -30.0, 30.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("UpArrow5:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("UpArrow2:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("UpArrow1:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("UpArrow3:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("UpArrow4:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "power_shot_charge"
length = 1.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("UpArrow1:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.25, 0.3, 0.35, 0.4, 0.6, 0.65, 0.7, 0.75, 0.8, 1, 1.05, 1.1, 1.15, 1.2, 1.4, 1.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -45.0, 0.0, 0.0, -45.0, -45.0, -45.0, 0.0, 0.0, -45.0, -45.0, -45.0, 0.0, 0.0, -45.0, -45.0, -45.0, 0.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UpArrow2:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.25, 0.3, 0.35, 0.4, 0.6, 0.65, 0.7, 0.75, 0.8, 1, 1.05, 1.1, 1.15, 1.2, 1.4, 1.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -15.0, 0.0, 0.0, -15.0, -15.0, -15.0, 0.0, 0.0, -15.0, -15.0, -15.0, 0.0, 0.0, -15.0, -15.0, -15.0, 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UpArrow1:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.25, 0.3, 0.35, 0.4, 0.6, 0.65, 0.7, 0.75, 0.8, 1, 1.05, 1.1, 1.15, 1.2, 1.4, 1.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("UpArrow2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.25, 0.3, 0.35, 0.4, 0.6, 0.65, 0.7, 0.75, 0.8, 1, 1.05, 1.1, 1.15, 1.2, 1.4, 1.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("UpArrow3:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.25, 0.3, 0.35, 0.4, 0.6, 0.65, 0.7, 0.75, 0.8, 1, 1.05, 1.1, 1.15, 1.2, 1.4, 1.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 15.0, 0.0, 0.0, 15.0, 15.0, 15.0, 0.0, 0.0, 15.0, 15.0, 15.0, 0.0, 0.0, 15.0, 15.0, 15.0, 0.0, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("UpArrow3:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.25, 0.3, 0.35, 0.4, 0.6, 0.65, 0.7, 0.75, 0.8, 1, 1.05, 1.1, 1.15, 1.2, 1.4, 1.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("UpArrow4:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2, 0.25, 0.3, 0.35, 0.4, 0.6, 0.65, 0.7, 0.75, 0.8, 1, 1.05, 1.1, 1.15, 1.2, 1.4, 1.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 45.0, 0.0, 0.0, 45.0, 45.0, 45.0, 0.0, 0.0, 45.0, 45.0, 45.0, 0.0, 0.0, 45.0, 45.0, 45.0, 0.0, 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("UpArrow4:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2, 0.25, 0.3, 0.35, 0.4, 0.6, 0.65, 0.7, 0.75, 0.8, 1, 1.05, 1.1, 1.15, 1.2, 1.4, 1.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("UpArrow5:position:x")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("UpArrow5:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.2, 1.45 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/10/type = "method"
tracks/10/path = NodePath(".")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 1.45 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_aimed_arrow"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "random_shot_charge"
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("UpArrow1:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -45.0, -45.0, -45.0, 45.0, -45.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UpArrow2:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -15.0, -45.0, -15.0, 45.0, -15.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UpArrow1:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("UpArrow2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("UpArrow3:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 15.0, -45.0, 15.0, 45.0, 15.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("UpArrow3:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("UpArrow4:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 45.0, -45.0, 45.0, 45.0, 45.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("UpArrow4:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("UpArrow5:position:x")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("UpArrow5:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/10/type = "method"
tracks/10/path = NodePath(".")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[sub_resource type="Animation" id=6]
resource_name = "reset"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("UpArrow1:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -45.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UpArrow2:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -15.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UpArrow1:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("UpArrow2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("UpArrow3:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 15.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("UpArrow3:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("UpArrow4:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 45.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("UpArrow4:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.11 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("UpArrow5:position:x")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("UpArrow5:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/10/type = "method"
tracks/10/path = NodePath(".")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[node name="Grahams" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Left3" type="Label" parent="."]
margin_left = -170.0
margin_top = -40.0
margin_right = -70.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.709804, 0.596078, 1 )
text = "3"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right3" type="Label" parent="."]
margin_left = 75.0
margin_top = -40.0
margin_right = 175.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.709804, 0.596078, 1 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow1" type="Position2D" parent="."]
position = Vector2( -45, 0 )

[node name="Arrow2" type="Position2D" parent="."]
position = Vector2( -15, 0 )

[node name="Arrow3" type="Position2D" parent="."]
position = Vector2( 15, 0 )

[node name="Arrow4" type="Position2D" parent="."]
position = Vector2( 45, 0 )

[node name="Bracket" type="Node2D" parent="."]
position = Vector2( 0, 40 )

[node name="Line2D" type="Line2D" parent="Bracket"]
points = PoolVector2Array( 0, 0, 0, 12 )
default_color = Color( 0.337255, 0, 0.180392, 1 )

[node name="Back" type="Line2D" parent="Bracket"]
points = PoolVector2Array( -60, -15, -60, 0, 60, 0, 60, -15 )
default_color = Color( 0.337255, 0, 0.180392, 1 )

[node name="Health" type="Line2D" parent="Bracket"]
points = PoolVector2Array( -62, 0, 62, 0 )
width = 6.0
default_color = Color( 0.847059, 0, 0.458824, 1 )

[node name="Title" type="Label" parent="Bracket"]
margin_left = -75.0
margin_top = 12.0
margin_right = 75.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.709804, 0.596078, 1 )
text = "g63"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpArrow2" type="Node2D" parent="."]
position = Vector2( -15, 0 )

[node name="Line2D3" type="Line2D" parent="UpArrow2"]
position = Vector2( 0, -19 )
points = PoolVector2Array( 0, 0, 0, 52 )
default_color = Color( 0.298039, 0, 0, 1 )

[node name="Line2D4" type="Line2D" parent="UpArrow2"]
position = Vector2( 0, -19 )
points = PoolVector2Array( -11, 11, 0, 0, 11, 11 )
default_color = Color( 0.298039, 0, 0, 1 )

[node name="Line2D" type="Line2D" parent="UpArrow2"]
position = Vector2( 0, -19 )
points = PoolVector2Array( 0, 0, 0, 50 )
width = 6.0
default_color = Color( 1, 0, 0, 1 )

[node name="Line2D2" type="Line2D" parent="UpArrow2"]
position = Vector2( 0, -19 )
points = PoolVector2Array( -10, 10, 0, 0, 10, 10 )
width = 6.0
default_color = Color( 1, 0, 0, 1 )

[node name="UpArrow1" type="Node2D" parent="."]
position = Vector2( -45, 0 )

[node name="Line2D3" type="Line2D" parent="UpArrow1"]
position = Vector2( 0, -19 )
points = PoolVector2Array( 0, 0, 0, 52 )
default_color = Color( 0.298039, 0, 0, 1 )

[node name="Line2D4" type="Line2D" parent="UpArrow1"]
position = Vector2( 0, -19 )
points = PoolVector2Array( -11, 11, 0, 0, 11, 11 )
default_color = Color( 0.298039, 0, 0, 1 )

[node name="Line2D" type="Line2D" parent="UpArrow1"]
position = Vector2( 0, -19 )
points = PoolVector2Array( 0, 0, 0, 50 )
width = 6.0
default_color = Color( 1, 0, 0, 1 )

[node name="Line2D2" type="Line2D" parent="UpArrow1"]
position = Vector2( 0, -19 )
points = PoolVector2Array( -10, 10, 0, 0, 10, 10 )
width = 6.0
default_color = Color( 1, 0, 0, 1 )

[node name="UpArrow3" type="Node2D" parent="."]
position = Vector2( 15, 0 )

[node name="Line2D3" type="Line2D" parent="UpArrow3"]
position = Vector2( 0, -19 )
points = PoolVector2Array( 0, 0, 0, 52 )
default_color = Color( 0.298039, 0, 0, 1 )

[node name="Line2D4" type="Line2D" parent="UpArrow3"]
position = Vector2( 0, -19 )
points = PoolVector2Array( -11, 11, 0, 0, 11, 11 )
default_color = Color( 0.298039, 0, 0, 1 )

[node name="Line2D" type="Line2D" parent="UpArrow3"]
position = Vector2( 0, -19 )
points = PoolVector2Array( 0, 0, 0, 50 )
width = 6.0
default_color = Color( 1, 0, 0, 1 )

[node name="Line2D2" type="Line2D" parent="UpArrow3"]
position = Vector2( 0, -19 )
points = PoolVector2Array( -10, 10, 0, 0, 10, 10 )
width = 6.0
default_color = Color( 1, 0, 0, 1 )

[node name="UpArrow4" type="Node2D" parent="."]
position = Vector2( 45, 0 )

[node name="Line2D3" type="Line2D" parent="UpArrow4"]
position = Vector2( 0, -19 )
points = PoolVector2Array( 0, 0, 0, 52 )
default_color = Color( 0.298039, 0, 0, 1 )

[node name="Line2D4" type="Line2D" parent="UpArrow4"]
position = Vector2( 0, -19 )
points = PoolVector2Array( -11, 11, 0, 0, 11, 11 )
default_color = Color( 0.298039, 0, 0, 1 )

[node name="Line2D" type="Line2D" parent="UpArrow4"]
position = Vector2( 0, -19 )
points = PoolVector2Array( 0, 0, 0, 50 )
width = 6.0
default_color = Color( 1, 0, 0, 1 )

[node name="Line2D2" type="Line2D" parent="UpArrow4"]
position = Vector2( 0, -19 )
points = PoolVector2Array( -10, 10, 0, 0, 10, 10 )
width = 6.0
default_color = Color( 1, 0, 0, 1 )

[node name="UpArrow5" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0 )

[node name="Line2D3" type="Line2D" parent="UpArrow5"]
position = Vector2( 0, -19 )
points = PoolVector2Array( 0, 0, 0, 52 )
default_color = Color( 0.298039, 0, 0, 1 )

[node name="Line2D4" type="Line2D" parent="UpArrow5"]
position = Vector2( 0, -19 )
points = PoolVector2Array( -11, 11, 0, 0, 11, 11 )
default_color = Color( 0.298039, 0, 0, 1 )

[node name="Line2D" type="Line2D" parent="UpArrow5"]
position = Vector2( 0, -19 )
points = PoolVector2Array( 0, 0, 0, 50 )
width = 6.0
default_color = Color( 1, 0, 0, 1 )

[node name="Line2D2" type="Line2D" parent="UpArrow5"]
position = Vector2( 0, -19 )
points = PoolVector2Array( -10, 10, 0, 0, 10, 10 )
width = 6.0
default_color = Color( 1, 0, 0, 1 )

[node name="UpArrowBullet" parent="." instance=ExtResource( 2 )]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/circle_shot_charge = SubResource( 4 )
anims/power_shot_charge = SubResource( 3 )
anims/random_shot_charge = SubResource( 5 )
anims/reset = SubResource( 6 )
